--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Kibeom Myoung
-logo: "/images/white_background.jpg?raw=true" 
+logo: "/images/white_background.png?raw=true" 
 description: > # your text below (remove <br> elements if you don't need line breaks)
   Hello! I'm a researcher in Mathematical Sciences at Seoul National University, advised by prof. <a href="https://ernestryu.com/"> Ernest Ryu</a>. I study Deep Learning Theory.
   <br><br>
